RESOLVED FIXED272209
[WebGPU] 2D texture copy fails in Queue::writeTexture when sourceBytesPerRow is not a multiple of 16 bytes
https://bugs.webkit.org/show_bug.cgi?id=272209
Summary [WebGPU] 2D texture copy fails in Queue::writeTexture when sourceBytesPerRow ...
Mike Wyrzykowski
Reported 2024-04-04 21:41:41 PDT
[WebGPU] 2D texture copy fails in Queue::writeTexture when sourceBytesPerRow is not a multiple of 16 bytes
Attachments
Mike Wyrzykowski
Comment 1 2024-04-04 21:41:54 PDT
Mike Wyrzykowski
Comment 2 2024-04-05 00:09:41 PDT
EWS
Comment 3 2024-04-05 14:15:51 PDT
Committed 277135@main (0713e3ecf508): <https://commits.webkit.org/277135@main> Reviewed commits have been landed. Closing PR #26892 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.