[WebGPU] 2D texture copy fails in Queue::writeTexture when sourceBytesPerRow is not a multiple of 16 bytes https://bugs.webkit.org/show_bug.cgi?id=272209 <radar://124475311>

Reviewed by Tadeu Zagallo.

Ensure compressed texture copies are a multiple of
their block size.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):

Canonical link: https://commits.webkit.org/277135@main